--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     main {
       flex: 1;
       padding: 20px;
-      background-color: #ffffff;
+      background-color: #c31818;
     }
 
     /* Footer */
