--- a/index2.html
+++ b/index2.html
@@ -15,7 +15,7 @@
     body {
       font-family: Arial, sans-serif;
       line-height: 1.6;
-      background-color: #592a2a;
+      background-color: #fffafa;
       color: #333;
       display: flex;
       flex-direction: column;
@@ -48,12 +48,12 @@
     main {
       flex: 1;
       padding: 20px;
-      background-color: #c31818;
+      background-color: #000000;
     }
 
     /* Footer */
     footer {
-      background-color: #333;
+      background-color: #ff0000;
       color: white;
       text-align: center;
       padding: 15px 10px;
